feat : add swagger and change pin
